fdo#54473 fdo#57133 fix RTF import of character styles

Regression from commit d2d77fd86e6cb7341e113557e2cfe3d7948759bd

Change-Id: I7accc5c383de3fa53c12527766c3fc155bfa9863